# opencoinevo

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
config/: config.json
ext/restbed/dependency/openssl/apps/: pca-key.pem
html/: index.html
html/css_2/: moncrypt.webflow.css
html/js/: app.js  cn_util.js  config.js  mnemonic.js  routes.js
html/js/controllers/: account.js  account_overview.js  generate_wallet.js  import_account.js  import_wallet.js  latest_blocks.js  latest_transactions.js  login.js  receive_coins.js  send_coins.js  top_bar.js  transactions.js  vanity_address.js  version.js
html/js/directives/: forms.js  qr_code.js  qr_scanner.js  scroll.js
html/js/filters/: money.js  payment_uri.js  time.js
html/js/lib/: mycoinevo-core.js
html/js/lib/mycoinevo_core_js/monero_utils/: MyCoinevoCoreCpp_WASM.wasm
html/js/services/: account.js  modal.js
html/modals/: import-wallet.html  login.html  openalias-confirm.html  transfer-confirm.html
html/partials/: account-overview.html  account-transactions.html  create-your-account.html  home.html  receive-coins.html  send-coins.html  support.html
scripts/: README.md  batch_import_test.py
sql/: opencoinevo.sql  opencoinevo_test.sql
src/: BlockchainSetup.cpp  BlockchainSetup.h  CMakeLists.txt  CmdLineOptions.cpp  CmdLineOptions.h  CurrentBlockchainStatus.cpp  CurrentBlockchainStatus.h  OpenCoinevoRequests.cpp  OpenCoinevoRequests.h  RPCCalls.cpp  RPCCalls.h  RandomOutputs.cpp  RandomOutputs.h  ThreadRAII.cpp  ThreadRAII.h  TxSearch.cpp  TxSearch.h  TxUnlockChecker.cpp  TxUnlockChecker.h  om_log.h  utils.cpp  utils.h
src/db/: MySqlAccounts.cpp  MySqlAccounts.h  MySqlConnector.cpp  MySqlConnector.h  MysqlPing.cpp  MysqlPing.h  ssqlses.cpp  ssqlses.h
tests/: CMakeLists.txt  JsonTx.cpp  JsonTx.h  README.md  bcstatus_tests.cpp  helpers.h  microcore_tests.cpp  mocks.h  mysql_tests.cpp  txsearch_tests.cpp
tests/res/: config_ill_formed.json
(+1 files in other folders)
